--- a/Inventory/Views/Home/Index.cshtml
+++ b/Inventory/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="d-flex w-100 vh-100 justify-content-evenly align-items-center flex-column">
+    <div class="text-center">
+        <h1 class="mt-5 fw-bold"> Welcome to your Management System!</h1>
+    </div>
+    <div >
+    <img src="~/images/Wimg.png" class="w-100"/>
+    </div>
+     <div class="text-center">
+        <h3 class="mt-5 fw-light">Drive Success with Intelligent Store Management Solutions.</h3>
+    </div>
 </div>
