--- a/Inventory/Views/Brands/Delete.cshtml
+++ b/Inventory/Views/Brands/Delete.cshtml
@@ -23,8 +23,11 @@
             <input type="hidden" asp-for="BrandId" />
             <input type="submit" value="Delete" class="btn btn-danger"  role="button" />
               <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                <i class='bx bxs-chevrons-left icon-action'></i>
+                Back to List
+            </a>
             </div>
         </form>
-        </div>
+    </div>
 </div>
