--- a/Inventory/Views/Customers/Delete.cshtml
+++ b/Inventory/Views/Customers/Delete.cshtml
@@ -63,9 +63,12 @@
         <form asp-action="Delete"class="d-flex w-100 mt-5  justify-content-between">
             <input type="hidden" asp-for="CustomerId" />
             <input type="submit" value="Delete" class="btn btn-danger"  role="button" />
-              <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+            <div>
+            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                <i class='bx bxs-chevrons-left icon-action'></i>
+                Back to List
+            </a>
             </div>
         </form>
-        </div>
+     </div>
 </div>
