--- a/Inventory/Views/Staffs/Index.cshtml
+++ b/Inventory/Views/Staffs/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<Inventory.Models.Staff>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Staff";
 }
 
 <h1 class="mt-5">Staff</h1>
-
 <p class="d-flex align-items-center mt-3 mb-4">
     <a class="btn btn-info d-flex align-items-center justify-content-center" role="button" asp-action="Create" style="color:white; font-weight:700"><i class="bi bi-plus icon-action" style="font-size:25px"></i>Create New</a>
 </p>
@@ -62,19 +61,21 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Store.StoreId)
             </td>
-
-          
-                <td>
-                    <a class="btn btn-primary " role="button" asp-action="Edit" asp-route-id="@item.StaffId"><i class="bi bi-pencil-square icon-action"></i></a>
-                </td>
-                <td>
-                    <a class="btn btn-warning" role="button" asp-action="Details" asp-route-id="@item.StaffId"><i class="bi bi-eye-fill icon-action"></i></a>
-
-                </td>
-                <td>
-
-                    <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.StaffId"><i class='bx bxs-trash icon-action'></i></a>
-                </td>
+            <td>
+                <a class="btn btn-primary " role="button" asp-action="Edit" asp-route-id="@item.StaffId">
+                    <i class="bi bi-pencil-square icon-action"></i>
+                </a>
+            </td>
+            <td>
+                <a class="btn btn-warning" role="button" asp-action="Details" asp-route-id="@item.StaffId">
+                    <i class="bi bi-eye-fill icon-action"></i>
+                </a>
+            </td>
+             <td>
+                <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.StaffId">
+                    <i class='bx bxs-trash icon-action'></i>
+                </a>
+             </td>
         </tr>
 }
     </tbody>
