--- a/Inventory/Views/Brands/Create.cshtml
+++ b/Inventory/Views/Brands/Create.cshtml
@@ -16,12 +16,15 @@
                 <input asp-for="BrandName" class="form-control" />
                 <span asp-validation-for="BrandName" class="text-danger"></span>
             </div>
-              <div class="d-flex w-100 mt-5  justify-content-between">
+              <div class="d-flex w-100 mt-5 justify-content-between">
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
-                <div class="">
-                    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+                <div>
+                    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                        <i class='bx bxs-chevrons-left icon-action'></i>
+                        Back to List
+                    </a>
                 </div>
             </div>
         </form>
