--- a/Inventory/Views/Categories/Delete.cshtml
+++ b/Inventory/Views/Categories/Delete.cshtml
@@ -8,7 +8,7 @@
 <h3 class="mt-5">Are you sure you want to delete this?</h3>
 <div>
     <h4>Category</h4>
-    <hr class="mb-4" />
+    <hr class="mb-4"/>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoryName)
@@ -18,13 +18,16 @@
         </dd>
     </dl>
     
-           <div class="d-flex w-100 mt-5  justify-content-between">
+    <div class="d-flex w-100 mt-5  justify-content-between">
         <form asp-action="Delete"class="d-flex w-100 mt-5  justify-content-between">
             <input type="hidden" asp-for="CategoryId" />
             <input type="submit" value="Delete" class="btn btn-danger"  role="button" />
               <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                <i class='bx bxs-chevrons-left icon-action'></i>
+                Back to List
+            </a>
             </div>
         </form>
-        </div>
+    </div>
 </div>
