--- a/Inventory/Views/Categories/Details.cshtml
+++ b/Inventory/Views/Categories/Details.cshtml
@@ -20,6 +20,9 @@
 </div>
 <div class="d-flex w-100 mt-5  justify-content-between">
     <a class="btn btn-success" role="button" asp-action="Edit" asp-route-id="@Model?.CategoryId">Edit</a>
-    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+        <i class='bx bxs-chevrons-left icon-action'></i>
+        Back to List
+    </a>
 </div>
 
