--- a/Inventory/Views/Customers/Details.cshtml
+++ b/Inventory/Views/Customers/Details.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h1 class="mt-5">Details</h1>
-
 <div>
     <h4>Customers</h4>
     <hr class="mb-4" />
@@ -62,5 +61,8 @@
 </div>
 <div class="d-flex w-100 mt-5  justify-content-between">
     <a class="btn btn-success" role="button" asp-action="Edit" asp-route-id="@Model?.CustomerId">Edit</a>
-    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+        <i class='bx bxs-chevrons-left icon-action'></i>
+        Back to List
+    </a>
 </div>
