--- a/Inventory/Views/Customers/Index.cshtml
+++ b/Inventory/Views/Customers/Index.cshtml
@@ -1,15 +1,14 @@
 ﻿@model IEnumerable<Inventory.Models.Customer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Customers";
 }
 
 <h1 class="mt-5">Customers</h1>
-
 <p class="d-flex align-items-center mt-3 mb-4">
     <a class="btn btn-info d-flex align-items-center justify-content-center" role="button" asp-action="Create" style="color:white; font-weight:700"><i class="bi bi-plus icon-action" style="font-size:25px"></i>Create New</a>
 </p>
-<table class="table table-striped table-hover table-bordered ">
+<table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>
@@ -68,17 +67,21 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ZipCode)
             </td>
-                   <td >
-                    <a class="btn btn-primary " role="button" asp-action="Edit" asp-route-id="@item.CustomerId"><i class="bi bi-pencil-square icon-action"></i></a>
-                                    </td>
-                        <td >
-                    <a class="btn btn-warning" role="button" asp-action="Details" asp-route-id="@item.CustomerId"><i class="bi bi-eye-fill icon-action"></i></a>
-
-                        </td>
-                        <td >
-
-                    <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.CustomerId"><i class='bx bxs-trash icon-action'></i></a>
-                       </td>
+            <td >
+                <a class="btn btn-primary " role="button" asp-action="Edit" asp-route-id="@item.CustomerId">
+                    <i class="bi bi-pencil-square icon-action"></i>
+                </a>
+            </td>
+            <td >
+                <a class="btn btn-warning" role="button" asp-action="Details" asp-route-id="@item.CustomerId">
+                    <i class="bi bi-eye-fill icon-action"></i>
+                </a>
+            </td>
+             <td >
+                 <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.CustomerId">
+                     <i class='bx bxs-trash icon-action'></i>
+                 </a>
+             </td>
         </tr>
 }
     </tbody>
