--- a/Inventory/Views/Products/Create.cshtml
+++ b/Inventory/Views/Products/Create.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h1 class="mt-5">Create</h1>
-
 <h4>New Product</h4>
 <hr class="mb-4" />
 <div class="row">
@@ -22,26 +21,29 @@
                 <select asp-for="BrandId" class ="form-control" asp-items="ViewBag.BrandId"></select>
             </div>
             <div class="form-group col-md-2">
-                <label asp-for="CategoryId" class="control-label"></label>
+                <label asp-for="CategoryId" class="control-label">Category ID</label>
                 <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
             <div class="form-group col-md-2">
-                <label asp-for="ModelYear" class="control-label"></label>
+                <label asp-for="ModelYear" class="control-label">Model Year</label>
                 <input asp-for="ModelYear" class="form-control" />
                 <span asp-validation-for="ModelYear" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
-                <label asp-for="ListPrice" class="control-label"></label>
+                <label asp-for="ListPrice" class="control-label">Price</label>
                 <input asp-for="ListPrice" class="form-control" />
                 <span asp-validation-for="ListPrice" class="text-danger"></span>
             </div>
               <div class="d-flex vw-100 mt-5  justify-content-between">
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-            <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
-            </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+                <div>
+                    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                        <i class='bx bxs-chevrons-left icon-action'></i>
+                        Back to List
+                    </a>
+                </div>
             </div>
         </form>
     </div>
