--- a/Inventory/Views/Products/Delete.cshtml
+++ b/Inventory/Views/Products/Delete.cshtml
@@ -40,14 +40,16 @@
             @Html.DisplayFor(model => model.Category.CategoryId)
         </dd>
     </dl>
-<div class="d-flex w-100 mt-5  justify-content-between">
+    <div class="d-flex w-100 mt-5  justify-content-between">
         <form asp-action="Delete"class="d-flex w-100 mt-5  justify-content-between">
             <input type="hidden" asp-for="ProductId" />
             <input type="submit" value="Delete" class="btn btn-danger"  role="button" />
-              <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+             <div>
+                <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                    <i class='bx bxs-chevrons-left icon-action'></i>
+                    Back to List
+                </a>
             </div>
         </form>
-        </div>
-    
+    </div>
 </div>
