--- a/Inventory/Views/Products/Index.cshtml
+++ b/Inventory/Views/Products/Index.cshtml
@@ -5,11 +5,10 @@
 }
 
 <h1 class="mt-5">Products</h1>
-
 <p class="d-flex align-items-center mt-3 mb-4">
     <a class="btn btn-info d-flex align-items-center justify-content-center" role="button" asp-action="Create" style="color:white; font-weight:700"><i class="bi bi-plus icon-action" style="font-size:25px"></i>Create New</a>
 </p>
-<table id="dtBasicExample" class="table table-striped table-hover table-bordered cellspacing="0">
+<table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>
@@ -51,17 +50,22 @@
                 @Html.DisplayFor(modelItem => item.Category.CategoryId)
             </td>
        
-                  <td >
-                    <a class="btn btn-primary " role="button" asp-action="Edit" asp-route-id="@item.ProductId"><i class="bi bi-pencil-square icon-action"></i></a>
-                        </td>
-                    <td >
-                    <a class="btn btn-warning" role="button" asp-action="Details" asp-route-id="@item.ProductId"><i class="bi bi-eye-fill icon-action"></i></a>
+            <td >
+                <a class="btn btn-primary " role="button" asp-action="Edit" asp-route-id="@item.ProductId">
+                    <i class="bi bi-pencil-square icon-action"></i>
+                </a>
+            </td>
+            <td >
+                <a class="btn btn-warning" role="button" asp-action="Details" asp-route-id="@item.ProductId">
+                    <i class="bi bi-eye-fill icon-action"></i>
+                </a>
 
-                    </td>
-                    <td >
-
-                    <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.ProductId"><i class='bx bxs-trash icon-action'></i></a>
-                   </td>
+            </td>
+            <td >
+                <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.ProductId">
+                    <i class='bx bxs-trash icon-action'></i>
+                </a>
+            </td>
         </tr>
 }
     </tbody>
