--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                       <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                       <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
                           <img src="~/images/Logo.png" alt="Logo"/>
                        </a>
                 </span>
                 <div class="text logo-text">
                     <span class="name">Store</span>
-                    <span class="profession">Control Panel</span>
+                    <span class="panel">Control Panel</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
