--- a/Inventory/Views/Staffs/Delete.cshtml
+++ b/Inventory/Views/Staffs/Delete.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-
-
 <h3 class="mt-5">Are you sure you want to delete this?</h3>
 <div>
     <h4>Staff</h4>
-    <hr class="mb-4" />
+    <hr class="mb-4"/>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
@@ -54,14 +52,16 @@
             @Html.DisplayFor(model => model.Store.StoreId)
         </dd>
     </dl>
-
-           <div class="d-flex w-100 mt-5  justify-content-between">
+    <div class="d-flex w-100 mt-5  justify-content-between">
         <form asp-action="Delete"class="d-flex w-100 mt-5  justify-content-between">
             <input type="hidden" asp-for="StaffId" />
             <input type="submit" value="Delete" class="btn btn-danger"  role="button" />
-              <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+             <div>
+                <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                    <i class='bx bxs-chevrons-left icon-action'></i>
+                    Back to List
+                </a>
             </div>
         </form>
-        </div>
+     </div>
 </div>
