--- a/Inventory/Views/Staffs/Details.cshtml
+++ b/Inventory/Views/Staffs/Details.cshtml
@@ -5,10 +5,9 @@
 }
 
 <h1>Details</h1>
-
 <div>
     <h4>Staff</h4>
-    <hr class="mb-4" />
+    <hr class="mb-4"/>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
@@ -57,5 +56,8 @@
 
 <div class="d-flex w-100 mt-5  justify-content-between">
     <a class="btn btn-success" role="button" asp-action="Edit" asp-route-id="@Model?.StaffId">Edit</a>
-    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+        <i class='bx bxs-chevrons-left icon-action'></i>
+        Back to List
+    </a>
 </div>
