--- a/Inventory/Views/Staffs/Edit.cshtml
+++ b/Inventory/Views/Staffs/Edit.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h1 class="mt-5">Edit</h1>
-
 <h4>Staff</h4>
 <hr class="mb-4" />
 <div class="row">
@@ -14,37 +13,37 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="StaffId" />
             <div class="form-group col-md-4">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label asp-for="FirstName" class="control-label">First Name</label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label">Last Name</label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label">Email</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
-                <label asp-for="Phone" class="control-label"></label>
+                <label asp-for="Phone" class="control-label">Phone</label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group col-md-2">
-                <label asp-for="Active" class="control-label"></label>
+                <label asp-for="Active" class="control-label">Active</label>
                 <input asp-for="Active" class="form-control" />
                 <span asp-validation-for="Active" class="text-danger"></span>
             </div>
             <div class="form-group col-md-2">
-                <label asp-for="StoreId" class="control-label"></label>
+                <label asp-for="StoreId" class="control-label">Store ID</label>
                 <select asp-for="StoreId" class="form-control" asp-items="ViewBag.StoreId"></select>
                 <span asp-validation-for="StoreId" class="text-danger"></span>
             </div>
             <div class="form-group col-md-2">
-                <label asp-for="ManagerId" class="control-label"></label>
+                <label asp-for="ManagerId" class="control-label">Manager ID</label>
                 <select asp-for="ManagerId" class="form-control" asp-items="ViewBag.ManagerId"></select>
                 <span asp-validation-for="ManagerId" class="text-danger"></span>
             </div>
@@ -52,8 +51,11 @@
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
-                <div class="">
-                    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+                <div>
+                    <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                        <i class='bx bxs-chevrons-left icon-action'></i>
+                        Back to List
+                    </a>
                 </div>
             </div>
         </form>
