--- a/Inventory/Views/Stores/Create.cshtml
+++ b/Inventory/Views/Stores/Create.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h1 class="mt-5">Create</h1>
-
 <h4>New Store</h4>
 <hr class="mb-4" />
 <div class="row">
@@ -13,37 +12,37 @@
         <form asp-action="Create" class="row g-3"> 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group col-md-4">
-                <label asp-for="StoreName" class="control-label"></label>
+                <label asp-for="StoreName" class="control-label">Name of the Store</label>
                 <input asp-for="StoreName" class="form-control" />
                 <span asp-validation-for="StoreName" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
-                <label asp-for="Phone" class="control-label"></label>
+                <label asp-for="Phone" class="control-label">Phone</label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label">Email</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group col-md-6">
-                <label asp-for="Street" class="control-label"></label>
+                <label asp-for="Street" class="control-label">Street</label>
                 <input asp-for="Street" class="form-control" />
                 <span asp-validation-for="Street" class="text-danger"></span>
             </div>
             <div class="form-group col-md-3">
-                <label asp-for="City" class="control-label"></label>
+                <label asp-for="City" class="control-label">City</label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
             <div class="form-group col-md-3">
-                <label asp-for="State" class="control-label"></label>
+                <label asp-for="State" class="control-label">State</label>
                 <input asp-for="State" class="form-control" />
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group col-md-2">
-                <label asp-for="ZipCode" class="control-label"></label>
+                <label asp-for="ZipCode" class="control-label">Zip Code</label>
                 <input asp-for="ZipCode" class="form-control" />
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
