--- a/Inventory/Views/Stores/Delete.cshtml
+++ b/Inventory/Views/Stores/Delete.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Delete";
 }
 
-
-
 <h3 class="mt-5">Are you sure you want to delete this?</h3>
 <div>
     <hr class="mb-4"/>
@@ -53,13 +51,16 @@
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
     </dl>
-       <div class="d-flex w-100 mt-5  justify-content-between">
+    <div class="d-flex w-100 mt-5  justify-content-between">
         <form asp-action="Delete"class="d-flex w-100 mt-5  justify-content-between">
             <input type="hidden" asp-for="StoreId" />
             <input type="submit" value="Delete" class="btn btn-danger"  role="button" />
-              <div>
-            <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index"><i class='bx bxs-chevrons-left icon-action'></i>Back to List</a>
+            <div>
+                <a class="btn btn-secondary d-flex align-items-center justify-content-center gap-1" role="button" asp-action="Index">
+                    <i class='bx bxs-chevrons-left icon-action'></i>
+                    Back to List
+                </a>
             </div>
         </form>
-        </div>
+    </div>
 </div>
