--- a/Inventory/wwwroot/css/site.css
+++ b/Inventory/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 html {
-  font-size: 16px;
+    font-size: 16px;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -9,17 +11,6 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-btn-warning:focus, btn-warning:hover{
-    color:white !important; 
-}
-html {
-    min-height: 100%;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
     margin: 0;
@@ -29,15 +20,12 @@ html {
 }
 
 :root {
-    /* ===== Colors ===== */
     --body-color: #FFFF;
     --sidebar-color: #000;
     --primary-color: #FFFF;
     --primary-color-light: #FFFF;
     --toggle-color: #DDD;
     --text-color: #FFF;
-    /* ====== Transition ====== */
-    --tran-03: all 0.2s ease;
     --tran-03: all 0.3s ease;
     --tran-04: all 0.3s ease;
     --tran-05: all 0.3s ease;
@@ -54,14 +42,7 @@ body {
     color: #fff;
 }
 
-body.dark {
-    --body-color: #18191a;
-    --sidebar-color: #242526;
-    --primary-color: #3a3b3c;
-    --primary-color-light: #3a3b3c;
-    --toggle-color: #fff;
-    --text-color: #ccc;
-}
+
 .icon-action{
     color:white;
 }
@@ -78,79 +59,76 @@ body.dark {
     z-index: 100;
 }
 
-    .sidebar.close {
-        width: 88px;
-    }
+.sidebar.close {
+   width: 88px;
+}
 
-    /* ===== Reusable code - Here ===== */
 
-    .sidebar ul{
+
+.sidebar ul{
     padding-left:0 !important;
+}
 
-    }
-    .sidebar li {
-        height: 50px;
-        list-style: none;
-        display: flex;
-        align-items: center;
-        margin-top: 20px;
-        width: inherit;
-    }
+.sidebar li {
+    height: 50px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    width: inherit;
+}
 
-    .sidebar header .image,
-    .sidebar .icon {
-        min-width: 60px;
-        border-radius: 6px;
-    }
+.sidebar header .image,
+.sidebar .icon {
+    min-width: 60px;
+    border-radius: 6px;
+}
 
-    .sidebar .icon {
-        min-width: 70px
-        border-radius: 6px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        font-size: 25px;
-        padding-left:4px;
-        
-    }
+.sidebar .icon {
+    min-width: 70px;
+    border-radius: 6px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 25px;
+    padding-left:4px; 
+}
 
-    .sidebar .text,
-    .sidebar .icon {
-        color: var(--text-color);
-        transition: var(--tran-03);
-    }
+.sidebar .text,
+.sidebar .icon {
+    color: var(--text-color);
+    transition: var(--tran-03);
+}
 
-    .sidebar .text {
-        font-size: 17px;
-        font-weight: 500;
-        white-space: nowrap;
-        opacity: 1;
-        margin-top: 5px;
-        
-        
-    }
+.sidebar .text {
+    font-size: 17px;
+    font-weight: 500;
+    white-space: nowrap;
+    opacity: 1;
+    margin-top: 5px;    
+}
 
-    .sidebar.close .text {
-        opacity: 0;
-    }
-    /* =========================== */
+.sidebar.close .text {
+    opacity: 0;
+}
+  
+.sidebar header {
+    position: relative;
+    cursor:pointer;
+}
 
-    .sidebar header {
-        position: relative;
-        cursor:pointer;
-    }
+.sidebar header .image-text {
+    display: flex;
+    align-items: center;
 
-        .sidebar header .image-text {
-            display: flex;
-            align-items: center;
-        }
+}
 
-        .sidebar header .logo-text {
-            display: flex;
-            flex-direction: column;
-            margin-left:8px;
-        }
+.sidebar header .logo-text {
+    display: flex;
+    flex-direction: column;
+    margin-left:8px;
+}
 
 header .image-text .name {
     margin-top: 2px;
@@ -158,7 +136,7 @@ header .image-text .name {
     font-weight: 600;
 }
 
-header .image-text .profession {
+header .image-text .panel {
     font-size: 16px;
     margin-top: -2px;
     display: block;
@@ -170,10 +148,9 @@ header .image-text .profession {
     justify-content: center;
 }
 
-    .sidebar header .image a img {
-        width: 50px;
-        
-    }
+.sidebar header .image a img {
+    width: 50px;    
+}
 
 .sidebar header .toggle {
     position: absolute;
@@ -193,9 +170,7 @@ header .image-text .profession {
     transition: var(--tran-05);
 }
 
-body.dark .sidebar header .toggle {
-    color: var(--text-color);
-}
+
 
 
 .sidebar.close .toggle {
@@ -206,25 +181,6 @@ body.dark .sidebar header .toggle {
     margin-top: 40px;
 }
 
-.sidebar li.search-box {
-    border-radius: 6px;
-    background-color: var(--primary-color-light);
-    cursor: pointer;
-    transition: var(--tran-05);
-}
-
-    .sidebar li.search-box input {
-        height: 100%;
-        width: 100%;
-        outline: none;
-        border: none;
-        background-color: var(--primary-color-light);
-        color: var(--text-color);
-        border-radius: 6px;
-        font-size: 17px;
-        font-weight: 500;
-        transition: var(--tran-05);
-    }
 
 .sidebar li a {
     list-style: none;
@@ -239,19 +195,16 @@ body.dark .sidebar header .toggle {
    
 }
 
-    .sidebar li a:hover {
-        background-color: var(--primary-color);
-    }
-
-        .sidebar li a:hover .icon,
-        .sidebar li a:hover .text {
-            color: var(--sidebar-color);
-        }
-
-body.dark .sidebar li a:hover .icon,
-body.dark .sidebar li a:hover .text {
-    color: var(--text-color);
+.sidebar li a:hover {
+    background-color: var(--primary-color);
 }
+
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text {
+    color: var(--sidebar-color);
+}
+
+
 
 .sidebar .menu-bar {
     height: calc(100% - 55px);
@@ -265,79 +218,6 @@ body.dark .sidebar li a:hover .text {
     display: none;
 }
 
-.sidebar .menu-bar .mode {
-    border-radius: 6px;
-    background-color: var(--primary-color-light);
-    position: relative;
-    transition: var(--tran-05);
-}
-..sidebar .menu-bar .mode{
-    color:blue;
-}
-.menu-bar .mode .sun-moon {
-    height: 50px;
-    width: 60px;
-}
-
-.mode .sun-moon i {
-    position: absolute;
-}
-
-    .mode .sun-moon i.sun {
-        opacity: 0;
-    }
-
-body.dark .mode .sun-moon i.sun {
-    opacity: 1;
-}
-
-body.dark .mode .sun-moon i.moon {
-    opacity: 0;
-}
-
-.menu-bar .bottom-content .toggle-switch {
-    position: absolute;
-    right: 0;
-    height: 100%;
-    min-width: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 6px;
-    cursor: pointer;
-}
-
-.mode-text{
-    background-color:red;
-}
-.menu-bar .bottom-content span {
-    background-color: aqua;
-}
-    .toggle-switch .switch {
-        position: relative;
-        height: 22px;
-        width: 40px;
-        border-radius: 25px;
-        background-color: var(--toggle-color);
-        transition: var(--tran-05);
-    }
-
-.switch::before {
-    content: '';
-    position: absolute;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    background-color: var(--sidebar-color);
-    transition: var(--tran-04);
-}
-
-body.dark .switch::before {
-    left: 20px;
-}
 
 .home {
     position: absolute;
@@ -350,12 +230,12 @@ body.dark .switch::before {
     transition: var(--tran-05);
 }
 
-    .home .text {
-        font-size: 30px;
-        font-weight: 500;
-        color: var(--text-color);
-        padding: 12px 60px;
-    }
+.home .text {
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--text-color);
+    padding: 12px 60px;
+}
 
 .sidebar.close ~ .home {
     left: 78px;
@@ -363,7 +243,4 @@ body.dark .switch::before {
     width: calc(100% - 78px);
 }
 
-body.dark .home .text {
-    color: var(--text-color);
-}
 
